<resources>
    <string name="app_name">TheApp</string>
    <string name="login_header_text">Welcome \n to \n Pokemon Inventory</string>
    <string name="login_username_ed">Username</string>
    <string name="login_password_et">Password</string>
    <string name="login_login_btn_text">Login</string>
    <!--    Errors login form       -->
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error">Please enter a valid password</string>
    <string name="general_error_msg">There has been an error, please try again.</string>
    <string name="pokemon_list_title">Pokemon inventory</string>
    <string name="logout_menu_action">Logout</string>
    <string name="name_label">Name:</string>
    <string name="sorry_error">Sorry, there might be some problems.</string>
    <string name="retry_button_text">Retry</string>
    <string name="home_title">Pokemon List</string>
</resources>
